--- a/notebooks/ia_benchmark.ipynb
+++ b/notebooks/ia_benchmark.ipynb
@@ -1,33 +1,18 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.6.9-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36964bitvenvvirtualenv3fb56614ec0145e7b634505cfc5fe33c",
-   "display_name": "Python 3.6.9 64-bit ('.venv': virtualenv)"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import itertools as it\n",
     "import pickle as pkl\n",
@@ -39,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +35,7 @@
     "    counties = pkl.load(f)\n",
     "\n",
     "data = load_daily_data(disease, prediction_region, counties)\n",
+    "data = data.iloc[:, 0:31]\n",
     "times = uniform_times_by_day(data.index)\n",
     "locs = uniform_locations_by_county(counties)\n",
     "\n",
@@ -64,13 +50,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "samp = IAEffectSampler(data, times, locs, temporal_bfs, spatial_bfs, verbose=False)\n",
-    "res = samp(data.index, data.columns)"
+    "# %%timeit\n",
+    "# ia_bfs = build_ia_bfs(temporal_bfs, spatial_bfs)\n",
+    "# res_new = sample_ia_effects(data, times, locs, ia_bfs, num_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# %%timeit\n",
+    "# samp = IAEffectSampler(data, times, locs, temporal_bfs, spatial_bfs, verbose=False)\n",
+    "# res_old = samp(data.index, data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Bad input argument to theano function with name \"/home/pascal/src/BSTIM-Covid19/src/sampling_utils.py:356\" at index 3 (0-based).  \nBacktrace when that variable is created:\n\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2858, in run_cell\n    raw_cell, store_history, silent, shell_futures)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2886, in _run_cell\n    return runner(coro)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n    coro.send(None)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3063, in run_cell_async\n    interactivity=interactivity, compiler=compiler, result=result)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3254, in run_ast_nodes\n    if (await self.run_code(code, result,  async_=asy)):\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3331, in run_code\n    exec(code_obj, self.user_global_ns, self.user_ns)\n  File \"<ipython-input-5-0cde12922336>\", line 1, in <module>\n    ia_bfs = build_ia_bfs(temporal_bfs, spatial_bfs)\n  File \"/home/pascal/src/BSTIM-Covid19/src/sampling_utils.py\", line 333, in build_ia_bfs\n    x2 = tt.fmatrix(\"x2\")\nWrong number of dimensions: expected 2, got 1 with shape (0,).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-0cde12922336>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mia_bfs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_ia_bfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemporal_bfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspatial_bfs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mres_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_ia_effects\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mia_bfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mres_new\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/BSTIM-Covid19/src/sampling_utils.py\u001b[0m in \u001b[0;36msample_ia_effects\u001b[0;34m(data, days, counties, ia_bfs, num_features, num_tps)\u001b[0m\n\u001b[1;32m    252\u001b[0m             \u001b[0mx_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_pred_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0moffset\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnum_tps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 254\u001b[0;31m             \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mia_bfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    255\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    256\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/theano/compile/function_module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    811\u001b[0m                         s.storage[0] = s.type.filter(\n\u001b[1;32m    812\u001b[0m                             \u001b[0marg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 813\u001b[0;31m                             allow_downcast=s.allow_downcast)\n\u001b[0m\u001b[1;32m    814\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    815\u001b[0m                     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/theano/tensor/type.py\u001b[0m in \u001b[0;36mfilter\u001b[0;34m(self, data, strict, allow_downcast)\u001b[0m\n\u001b[1;32m    176\u001b[0m             raise TypeError(\"Wrong number of dimensions: expected %s,\"\n\u001b[1;32m    177\u001b[0m                             \" got %s with shape %s.\" % (self.ndim, data.ndim,\n\u001b[0;32m--> 178\u001b[0;31m                                                         data.shape))\n\u001b[0m\u001b[1;32m    179\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maligned\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Bad input argument to theano function with name \"/home/pascal/src/BSTIM-Covid19/src/sampling_utils.py:356\" at index 3 (0-based).  \nBacktrace when that variable is created:\n\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2858, in run_cell\n    raw_cell, store_history, silent, shell_futures)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2886, in _run_cell\n    return runner(coro)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n    coro.send(None)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3063, in run_cell_async\n    interactivity=interactivity, compiler=compiler, result=result)\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3254, in run_ast_nodes\n    if (await self.run_code(code, result,  async_=asy)):\n  File \"/home/pascal/src/BSTIM-Covid19/.venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3331, in run_code\n    exec(code_obj, self.user_global_ns, self.user_ns)\n  File \"<ipython-input-5-0cde12922336>\", line 1, in <module>\n    ia_bfs = build_ia_bfs(temporal_bfs, spatial_bfs)\n  File \"/home/pascal/src/BSTIM-Covid19/src/sampling_utils.py\", line 333, in build_ia_bfs\n    x2 = tt.fmatrix(\"x2\")\nWrong number of dimensions: expected 2, got 1 with shape (0,)."
+     ]
+    }
+   ],
+   "source": [
+    "ia_bfs = build_ia_bfs(temporal_bfs, spatial_bfs)\n",
+    "res_new = sample_ia_effects(data, times, locs, ia_bfs, num_features)\n",
+    "res_new"
    ]
   },
   {
@@ -79,10 +104,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "ia_bfs = build_ia_bfs(temporal_bfs, spatial_bfs)\n",
-    "res = sample_ia_effects(data, days, counties, ia_bfs, num_features)"
+    "samp = IAEffectSampler(data, times, locs, temporal_bfs, spatial_bfs, verbose=False)\n",
+    "res_old = samp(data.index, data.columns)\n",
+    "res_old"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array_equal(res_old, res_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3.6.9 64-bit ('.venv': virtualenv)",
+   "language": "python",
+   "name": "python36964bitvenvvirtualenv3fb56614ec0145e7b634505cfc5fe33c"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
